# dimensio

./: .dockerignore  .gitignore  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_MIRROR_SETUP.md  LICENSE  MANIFEST.in  README.md  README_CN.md  TROUBLESHOOT.md  __init__.py  pyproject.toml  requirements.txt  run_compression.py  run_compression.sh  setup.py  start-all.sh  viz.py
api/: __init__.py  extractors.py  models.py  requirements.txt  run.sh  schemas.py  server.py
core/: __init__.py  compressor.py  pipeline.py  progress.py  step.py  update.py
deploy/: .env.example  .env.local  .env.production  .gitignore  CHANGELOG.md  CHECKLIST.md  CORS_FIX_README.md  ENVIRONMENTS.md  FILES.md  FINAL_FIX.md  FIXED_EMPTY_RESULT_ISSUE.md  FIX_PORT_CONFLICT.md  INDEX.md  MANUAL_BUILD_TEST.md  PYTHON38.md  PYTHON_VERSION_GUIDE.md  QUICKSTART.md  QUICKSTART.txt  QUICK_FIX.md  QUICK_START.md  README.md  README_WORKING_BUILD.md  TERSER_FIX_README.md  TROUBLESHOOTING.md  build-and-deploy.sh  check-backend.sh  deploy-local.sh  deploy-production.sh  deploy.sh  diagnose-backend.sh  diagnose-empty-results.sh  diagnose.sh  docker-optimize.sh  find-files.sh  fix-backend-direct.sh  fix-backend.sh  fix-build-error.sh  fix-build-stuck.sh  fix-buildkit.sh  fix-cors-issue.sh  (+16 more)
deploy/docker/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  UPDATE_DIGESTS.md.bak  build.sh  daemon.json  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  nginx.conf  setup-docker-mirror.sh
deploy/nginx/: default.conf  dimensio.conf  nginx.conf
deploy/systemd/: dimensio-api.service
dimensio/: __init__.py  viz.py
dimensio/api/: __init__.py  compress_api.py  filling_factory.py  step_factory.py
dimensio/core/: compressor.py  pipeline.py  progress.py  step.py  update.py
examples/: FRONTEND_API.md  README.md  README_CN.md  adaptive_strategies.py  comprehensive.py  multi_single_source.py  utils.py  visualization_example.py
filling/: __init__.py  base.py  clipping.py  default.py
front/: API_INTEGRATION.md  FINAL_SUMMARY.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SUMMARY.md  USAGE_GUIDE.md  package-lock.json  package.json  start.sh  test-api.sh  tsconfig.json  webpack.config.js
sampling/: __init__.py  base.py  mixed.py  standard.py
utils/: __init__.py  logger.py
(+121 files in other folders)
